--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- ... existing meta tags ... -->
-    <title>Casa Serenidad - Asistente</title>
+    <title>Asistente Casa Serenidad</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Agregamos fuente moderna de Google -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
